# random-walks-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: BrownianWalker.ipynb  CorrelatedWalker.ipynb  MixedTimeWalker.ipynb  MixedWalker.ipynb
random-walk_c/: CMakeLists.txt  README.md
random-walk_c/resources/: chequered.txt  correlatedTMs.txt  land.txt  land2.txt  land3.txt  landcover_142.txt  landcover_142_brownian.txt  landcover_142_orig.txt  mixed.txt  rust_kernel.txt  terrain_gpt.txt  terrain_movebank.txt  timewalk3.json  twalk.json  twalk3.json  weather_trajectory.csv
random-walk_c/resources/my_gridded_weather_grid_csvs/: weather_grid_y0_x0.csv  weather_grid_y0_x1.csv  weather_grid_y0_x2.csv  weather_grid_y0_x3.csv  weather_grid_y0_x4.csv  weather_grid_y1_x0.csv  weather_grid_y1_x1.csv  weather_grid_y1_x2.csv  weather_grid_y1_x3.csv  weather_grid_y1_x4.csv  weather_grid_y2_x0.csv  weather_grid_y2_x1.csv  weather_grid_y2_x2.csv  weather_grid_y2_x3.csv  weather_grid_y2_x4.csv  weather_grid_y3_x0.csv  weather_grid_y3_x1.csv  weather_grid_y3_x2.csv  weather_grid_y3_x3.csv  weather_grid_y3_x4.csv  weather_grid_y4_x0.csv  weather_grid_y4_x1.csv  weather_grid_y4_x2.csv  weather_grid_y4_x3.csv  weather_grid_y4_x4.csv
random-walk_c/src/: config.h  main.cpp  memory_utils.h
random-walk_c/src/math/: Point2D.h  distribution.c  distribution.h  kernel_slicing.c  kernel_slicing.h  math_utils.c  math_utils.h  path_finding.c  path_finding.h  point2D.c
random-walk_c/src/matrix/: ScalarMapping.c  ScalarMapping.h  matrix.c  matrix.h  tensor.c  tensor.h
random-walk_c/src/parsers/: move_bank_parser.c  move_bank_parser.h  serialization.c  serialization.h  terrain_parser.c  terrain_parser.h  types.h  walk_json.c  walk_json.h  weather_parser.c  weather_parser.h
random-walk_c/src/walk/: b_walk.c  b_walk.h  c_walk.c  c_walk.h  m_walk.c  m_walk.h
random_walk_package/: README.md  __init__.py  readme.txt  wrapper.py
random_walk_package/bindings/: __init__.py  brownian_walk.py  correlated_walk.py  mixed_walk.py  plotter.py
random_walk_package/bindings/cuda/: brownian_gpu.py  correlated_gpu.py  mixed_gpu.py
random_walk_package/bindings/data_processing/: environment_handling.py  movebank_parser.py  utils.py  walk_json.py  weather_parser.py
random_walk_package/bindings/data_structures/: EnvWeights.py  kernel_terrain_mapping.py  kernels.py  matrix.py  point2D.py  tensor.py  terrain.py  types.py
random_walk_package/core/: AnimalMovement.py  AnimalMovementNew.py  BehavioralParams.py  BiasedWalker.py  BrownianWalker.py  CorrelatedWalker.py  KernelFactory.py  MarineMovement.py  MixedTimeWalker.py  MixedWalker.py  MovementPolicy.py  StateDependentWalker.py  WalkerHelper.py  hmm.py
random_walk_package/core/hmm/: kernels.py  models.py  preprocessing.py  utils.py  visualization.py
random_walk_package/data_sources/: .env  geo_fetcher.py  land_cover_adapter.py  land_cover_fetcher.py  movebank_adapter.py  ocean_cover.py  open_meteo_api.py  walk_visualization.py  walks_serialization.py  weather_api.py
random_walk_package/dbg/: pl.py
random_walk_package/random_walk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
random_walk_package/resources/: 1000 Cranes. Southern Kazakhstan.csv  Home range and movement patterns of the Andean Fox in Cotopaxi National Park Ecuador.csv  Trans-Andean and divergent migration of Black Skimmers (data from Davenport et al. 2016).csv  land.txt  land2.txt  land3.txt  landcover_142.txt  landcover_baboons123.tif  my_gridded_weather.csv  terrain.txt  terrain2.txt  walk.json  weather_trajectory.csv
random_walk_package/resources/Boars_Austria/: boar_study_austria.csv
random_walk_package/resources/Caracal_study/: landcover_baboons123_200.txt
random_walk_package/resources/Caracal_study/weather_data/: weather_grid_y0_x0.csv  weather_grid_y0_x1.csv  weather_grid_y0_x2.csv  weather_grid_y0_x3.csv  weather_grid_y0_x4.csv  weather_grid_y1_x0.csv  weather_grid_y1_x1.csv  weather_grid_y1_x2.csv  weather_grid_y1_x3.csv  (+16 more)
random_walk_package/resources/baboon_SA_study/: landcover_baboons123_400.txt
random_walk_package/resources/biology_birds/: Biology of birds practical.csv
random_walk_package/resources/elephant_study/: Elephant Research - Ivory Coast - Collar 1630.csv  landcover_baboons123.tif  landcover_baboons123_200.txt
random_walk_package/resources/leap_of_the_cat/: The Leap of the Cat.csv
random_walk_package/resources/movebank_test/: The Leap of the Cat.csv  landcover_JUNINHO_-52.5_-22.6_-52.3_-22.1.tif  landcover_JUNINHO_-52.5_-22.6_-52.3_-22.1_300.txt  landcover_LUAN_-52.2_-22.7_-52.2_-22.6.tif  landcover_LUAN_-52.2_-22.7_-52.2_-22.6_300.txt
random_walk_package/resources/ruby_throat_china/: Siberian rubythroat tracking from Qinghai, China.csv
random_walk_package/resources/tiger_sharks/: shark_13_filtered.csv
random_walk_package/resources/turtles_study/: Striped Mud Turtles (Kinosternon baurii) Lakeland, FL.csv  landcover_baboons123.tif
tests/: api_tests.py  biased_test.py  brownian_test.py  correlated_test.py  cuda_test.py  mixed_walk_test.py  test.py  test_roundtrip.py
(+55 files in other folders)
