[build-system]
requires = ["scikit-build-core>=0.8", "setuptools", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "random_walk"
version = "0.1.0"
description = "Random walk package with C backend"
authors = [
    { name = "Kevin Buchin" },
    { name = "Mart Hagedoorn" },
    { name = "Alexander Korn" },
    { name = "Omar Chatila" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "rasterio",
    "matplotlib",
    "PyQt6",
    "rioxarray",
    "xarray",
    "requests",
    "pandas",
    "pystac_client",
    "planetary_computer",
    "memory_profiler",
    "folium",
    "IPython"
]

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.args = ["-DENABLE_CUDA=OFF",
    "-DBUILD_TESTING=OFF"]
build.verbose = true
build-dir = "build"

[tool.scikit-build.wheel]
packages = ["random_walk_package"]

[tool.setuptools.packages.find]
where = ["."]
include = ["random_walk_package*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

pythonpath = [
    ".", "random_walk_package"
]

